--- a/gh-pages/source/blog/index.html.erb
+++ b/gh-pages/source/blog/index.html.erb
@@ -1,12 +1,7 @@
-<% blog.articles[0...5].each do |article| %>
-  <article>
-    <h1>
-      <a href="<%= article.url %>"><%= article.title %></a>
-      <time><%#= article.date.strftime('%b %e %Y') %></time>
-    </h1>
-
-    <%#= article.summary %>
-
-    <!-- <a href="<%= article.url %>">Read more</a> -->
-  </article>
-<% end %>
+<ul>
+  <% blog.articles[0...5].each do |article| %>
+    <li>
+      <%= link_to article.title, article.url %>
+    </li>
+  <% end %>
+</ul>
