--- a/gh-pages/source/layouts/layout.erb
+++ b/gh-pages/source/layouts/layout.erb
@@ -6,7 +6,7 @@
     <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
 
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "Middleman" %></title>
+    <title><%= current_page.data.title || "GitHub Comment" %></title>
 
     <%= stylesheet_link_tag :site %>
     <%= javascript_include_tag :all %>
