add self host .env example

--- a/gh-pages/source/blog/index.html.erb
+++ b/gh-pages/source/blog/index.html.erb
@@ -1,4 +1,8 @@
-<h1> Where there is a post, there are many comments </h1>
+---
+title: github-comment 的博客
+---
+
+<p> Where there is a post, there are many comments </p>
 
 <ul>
   <% blog.articles.each do |article| %>
