server_url configable and ga script

--- a/gh-pages/source/layouts/layout.erb
+++ b/gh-pages/source/layouts/layout.erb
@@ -16,5 +16,12 @@
     <div class="container">
       <%= yield %>
     </div>
+
+    <script>
+      window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+      ga('create', 'UA-68587267-1', 'auto');
+      ga('send', 'pageview');
+    </script>
+    <script async="" src="//www.google-analytics.com/analytics.js"></script>
   </body>
 </html>
