--- a/client/app.scss
+++ b/client/app.scss
@@ -26,11 +26,18 @@ $blue: #33C3F0;
   margin-top: 1rem;
 }
 
-// 已有评论列表的 container
-.github_comment_items_wrapper {
-  @include container();
+.login_via_github {
+  display: inline-block;
   height: $input_height;
-  margin-top: 1rem;
+  padding: 0 30px;
+  color: #FFF;
+  background-color: $blue;
+  text-align: center;
+  margin-left: 1rem;
+  line-height: $input_height;
+  border-radius: 4px;
+  border: 1px solid $blue;
+  cursor: pointer;
 }
 
 // 单个评论的 wrapper
@@ -41,18 +48,35 @@ $blue: #33C3F0;
 
 // 头像
 .github_comment_avatar {
-  @include span(1 of 12);
+  @include span(2 of 12);
+  min-width: 50px;
   img {
     max-width: $input_height;
     border-radius: 50px; // 圆角
   }
 }
 
+.detect_input {
+  width: 80%;
+  height: $input_height;
+  padding: 6px 10px;
+  background-color: #fff;
+  border: 1px solid #D1D1D1;
+  border-radius: 4px;
+  box-shadow: none;
+  box-sizing: border-box;
+  &:focus {
+    outline-color: transparent;
+    outline-style: none;
+    outline: none;
+  }
+}
+
 // 评论输入框
 .github_comment_input {
-  @include span(11 of 12 last);
+  @include span(10 of 12 last);
   input {
-    width: 80%;
+    width: 60%;
     height: $input_height;
     padding: 6px 10px;
     background-color: #fff;
@@ -67,9 +91,10 @@ $blue: #33C3F0;
     }
   }
   button {
+    max-width: 20%;
     display: inline-block;
     height: $input_height;
-    padding: 0 30px;
+    padding: 0 1rem;
     color: #FFF;
     background-color: $blue;
     text-align: center;
@@ -78,12 +103,16 @@ $blue: #33C3F0;
     border-radius: 4px;
     border: 1px solid $blue;
     cursor: pointer;
+    &:disabled {
+      background-color: grey;
+      border: 1px solid grey;
+    }
   }
 }
 
 // 已有评论内容
 .github_comment_content {
-  @include span(11 of 12 last);
+  @include span(10 of 12 last);
   p {
     margin: 0;
     line-height: $input_height;
