--- a/gh-pages/source/themes/demo.html.erb
+++ b/gh-pages/source/themes/demo.html.erb
@@ -31,7 +31,7 @@
   </div>
   <div id="github-comment-form">
     <div class="comments-row-one">
-      <div class="comments-row-one"><img class="avatar" src="http://github-comment.herokuapp.com/images/boohee.png" title=""></div>
+      <div class="comments-row-one"><img class="avatar" src="http://github-comment.songofcode.com/images/boohee.png" title=""></div>
       <div class="comments-row-one-eleven status_div" id="status_default"><input class="u-full-width" id="github-comment-default-input" name="body" placeholder="TODO: " type="text"></div>
     </div>
   </div>
