--- a/gh-pages/layouts/blog.liquid
+++ b/gh-pages/layouts/blog.liquid
@@ -1,11 +1,11 @@
 {% extends base %}
 
 {% block content %}
-<div class="posts">
-  <ul class="posts__list">
+<div class="medium-12 columns">
+  <ul>
     {% for post in collections.posts %}
       <li class="post">
-        <a href="/blog/{{ post.title | downcase | split: ' ' | join: '-'}}">{{ post.title }}</a>
+        <a href="/{{post.path}}">{{ post.title }}</a>
       </li>
     {% endfor %}
   </ul>
