--- a/gh-pages/layouts/doc.liquid
+++ b/gh-pages/layouts/doc.liquid
@@ -1,11 +1,11 @@
 {% extends base %}
 
 {% block content %}
-<div class="posts">
-  <ul class="posts__list">
+<div class="medium-12 columns">
+  <ul>
     {% for doc in collections.docs %}
       <li class="doc">
-        <a href="/doc/{{ doc.title | downcase | split: ' ' | join: '-'}}">{{ doc.title }}</a>
+        <a href="/{{ doc.path }}">{{ doc.title }}</a>
       </li>
     {% endfor %}
   </ul>
