add github comment url for blog

--- a/gh-pages/layouts/includes/base.liquid
+++ b/gh-pages/layouts/includes/base.liquid
@@ -16,11 +16,11 @@
   <body>
 
     <!-- TOP RIGHT RIBBON: START COPYING HERE -->
-     <div class="github-fork-ribbon-wrapper right">
-         <div class="github-fork-ribbon">
-             <a href="https://github.com/teddy-ma/github-comment">Fork me on GitHub</a>
-         </div>
-     </div>
+    <div class="github-fork-ribbon-wrapper right">
+      <div class="github-fork-ribbon">
+        <a href="https://github.com/teddy-ma/github-comment">Fork me on GitHub</a>
+      </div>
+    </div> <!-- fork me on github -->
 
     <div class="row">
       <div class="top-bar-left">
@@ -36,7 +36,7 @@
           </li>
         </ul>
       </div>
-    </div>
+    </div> <!-- 菜单 -->
 
     <div class="container">
 
@@ -48,7 +48,7 @@
         </div>
       </div>
 
-    </div>
+    </div> <!-- main body -->
 
     <!-- Compressed JavaScript -->
     <!-- <script src="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.js"></script> -->
