--- a/gh-pages/layouts/doc.liquid
+++ b/gh-pages/layouts/doc.liquid
@@ -5,7 +5,7 @@
   <ul>
     {% for doc in collections.docs %}
       <li class="doc">
-        <a href="{{rootPath}}/{{ doc.path }}">{{ doc.title }}</a>
+        <a href="/{{ doc.path }}">{{ doc.title }}</a>
       </li>
     {% endfor %}
   </ul>
