--- a/gh-pages/layouts/includes/base.liquid
+++ b/gh-pages/layouts/includes/base.liquid
@@ -26,13 +26,13 @@
       <div class="top-bar-left">
         <ul class="menu" >
           <li role="menuitem" tabindex="0">
-            <a href="{{rootPath}}">Home</a>
+            <a href="/">Home</a>
           </li>
           <li role="menuitem" tabindex="0">
-            <a href="{{rootPath}}/doc/getting-started">Document</a>
+            <a href="/doc/getting-started">Document</a>
           </li>
           <li role="menuitem" tabindex="0">
-            <a href="{{rootPath}}/blog">Blog</a>
+            <a href="/blog">Blog</a>
           </li>
         </ul>
       </div>
