fix: update style url and image url

--- a/gh-pages/layouts/includes/base.liquid
+++ b/gh-pages/layouts/includes/base.liquid
@@ -7,11 +7,7 @@
     <!-- Compressed CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.css">
     <!-- <link rel="stylesheet" href="css/style.css"> -->
-
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.min.css" />
-<!--[if lt IE 9]>
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.ie.min.css" />
-<![endif]-->
+    <link rel="stylesheet" href="https://cdn.rawgit.com/simonwhitaker/github-fork-ribbon-css/gh-pages/gh-fork-ribbon.css" />
   </head>
   <body>
 
