--- a/gh-pages/layouts/index.liquid
+++ b/gh-pages/layouts/index.liquid
@@ -1,7 +1,7 @@
 {% extends base %}
 
 {% block content %}
-  <img class="medium-6 columns" src="../assets/demo-site.png" />
+  <img class="medium-6 columns" src="/assets/demo-site.png" />
   <div class="medium-6 columns">
     {{ contents }}
   </div>
