feat: add build time for gh pages

--- a/gh-pages/layouts/includes/base.liquid
+++ b/gh-pages/layouts/includes/base.liquid
@@ -46,6 +46,17 @@
 
     </div> <!-- main body -->
 
+    <div class="row">
+      <div class="medium-6 columns">
+        <p> {{ date }} </p>
+      </div>
+      <div class="medium-6 columns">
+        <ul class="menu align-right">
+          <li class="menu-text">Copyright © 2016 Ma Lucheng</li>
+        </ul>
+      </div>
+    </div><!-- footer -->
+
     <!-- Compressed JavaScript -->
     <!-- <script src="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.js"></script> -->
   </body>
