update blog theme

--- a/client/app.scss
+++ b/client/app.scss
@@ -89,6 +89,9 @@ $white: #fff;
   line-height: $input_height;
   border-radius: 15px;
   text-decoration: none;
+  &:visited {
+    color: $white;
+  }
 }
 
 .avatar {
