--- a/gh-pages/layouts/includes/base.liquid
+++ b/gh-pages/layouts/includes/base.liquid
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Compressed CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.css">
-    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <link rel="stylesheet" href="/css/style.css"> <!-- custom css -->
     <link rel="stylesheet" href="https://cdn.rawgit.com/simonwhitaker/github-fork-ribbon-css/gh-pages/gh-fork-ribbon.css" />
+    <link rel="stylesheet" href="https://cdn.rawgit.com/sindresorhus/github-markdown-css/gh-pages/github-markdown.css" />
+    <!-- <link rel="stylesheet" href="https://cdn.rawgit.com/PrismJS/prism-themes/master/themes/prism-atom-dark.css" /> -->
   </head>
   <body>
 
@@ -48,7 +50,9 @@
 
     <div class="row">
       <div class="medium-6 columns">
-        <p> {{ date }} </p>
+        <ul class="menu">
+          <li style="float: left" class="menu-text">build on {{ date  | date: "%a, %b %d, %y" }}</li>
+        </ul>
       </div>
       <div class="medium-6 columns">
         <ul class="menu align-right">
