fix: fix doc link

--- a/gh-pages/layouts/includes/base.liquid
+++ b/gh-pages/layouts/includes/base.liquid
@@ -48,7 +48,7 @@
     <div class="row">
       <div class="medium-6 columns">
         <ul class="menu">
-          <li style="float: left" class="menu-text">build on {{ date  | date: "%a, %b %d, %y" }}</li>
+          <li style="float: left" class="menu-text">Last updated {{ date  | date: "%a, %b %d, %y" }}</li>
         </ul>
       </div>
       <div class="medium-6 columns">
