chore: update gh-pages fork me title
and migrate blog to jianshu

--- a/gh-pages/layouts/blog.liquid
+++ b/gh-pages/layouts/blog.liquid
@@ -3,11 +3,18 @@
 {% block content %}
 <div class="medium-12 columns">
   <ul>
-    {% for post in collections.posts %}
-      <li class="post">
-        <a href="/{{post.path}}">{{ post.title }}</a>
-      </li>
-    {% endfor %}
+    <li class="post">
+      <a href="http://www.jianshu.com/p/2e9d078aa606">github-comment 正式发布了!</a>
+    </li>
+    <li class="post">
+      <a href="http://www.jianshu.com/p/69e85578645b">模块化 css 实战</a>
+    </li>
+    <li class="post">
+      <a href="http://www.jianshu.com/p/c8ef2fc7096e">从 Heroku 迁移 Nodejs 应用到 Docker</a>
+    </li>
+    <li class="post">
+      <a href="http://www.jianshu.com/p/bd4f86ba2398">Github Comment 发布 1.0.0</a>
+    </li>
   </ul>
 </div>
 {% endblock %}
