--- a/gh-pages/layouts/includes/base.liquid
+++ b/gh-pages/layouts/includes/base.liquid
@@ -6,16 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.css">
     <link rel="stylesheet" href="/css/style.css"> <!-- custom css -->
-    <link rel="stylesheet" href="https://cdn.rawgit.com/simonwhitaker/github-fork-ribbon-css/gh-pages/gh-fork-ribbon.css" />
     <link rel="stylesheet" href="https://cdn.rawgit.com/sindresorhus/github-markdown-css/gh-pages/github-markdown.css" />
+    <link rel="stylesheet" href="https://simonwhitaker.github.io/github-fork-ribbon-css/gh-fork-ribbon.css" />
   </head>
   <body>
 
-    <div class="github-fork-ribbon-wrapper right">
-      <div class="github-fork-ribbon">
-        <a href="https://github.com/teddy-ma/github-comment">Fork me on GitHub</a>
-      </div>
-    </div> <!-- fork me on github -->
+    <a class="github-fork-ribbon" href="https://github.com/teddy-ma/github-comment" title="Fork me on GitHub">Fork me on GitHub</a>
 
     <div class="row">
       <div class="top-bar-left">
