return back after login success

--- a/server/views/success.ejs
+++ b/server/views/success.ejs
@@ -9,11 +9,10 @@
     <h1>登录成功</h1>
   </body>
 
-  <!-- <script type="text/javascript">
-    alert(window.parent.document.getElementById('#comment-input'));
-  </script> -->
   <script type="text/javascript">
-    window.close();
+    // window.close();
+    // alert('<%= return_url %>');
+    window.location.href='<%= return_url %>';
   </script>
 
 </html>
